--- a/themes/polymathic/sass/all_deps.scss
+++ b/themes/polymathic/sass/all_deps.scss
@@ -1,4 +1,4 @@
-@import "../node_modules/normalize-scss/sass/normalize/_normalize-mixin";
+// @import "themes/polymathic/node_modules/normalize-scss/sass/_normalize.scss";
 
 @import "../node_modules/animate.css/animate";
 
